<?xml version="1.0"?>
<package>
  <name>arm_disarm</name>
  <version>0.0.0</version>
  <description>The arming and disarming package for snappy_ros</description>

  <maintainer email="waage@todo.todo">waage</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>mavros_msgs</run_depend>
</package>
